--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             cursor: pointer;
         }
 
-        @media (min-width: 670px) {
+/*         @media (min-width: 670px) {
               button{
 position: absolute;
 top: 82%;
@@ -108,7 +108,7 @@ position: absolute;
 top: 71%;
 left:45%;
               }  
-}
+} */
 
     </style>
 </head>
