--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 
         .h{
             display: block;
-                font-size: 100px;
+                font-size: 300px;
                 text-align: center;
         }
         .p{
             display: block;
-                font-size: 70px;
+                font-size: 170px;
                 text-align: center;
         }
         button{
             position: relative;
             background-color: black;
             color:white;
-            padding:24px 47px;
+            padding:200px 400px;
             position: absolute;
             top:70%;
             left:50%;
             border-radius: 50px;
             cursor: pointer;
         }
-
-/*         @media (min-width: 670px) {
+/* 
+        @media (min-width: 670px) {
               button{
 position: absolute;
 top: 82%;
