--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         }
 
         .h{
+            background-color:black;
+            color:white;
             display: block;
                 font-size: 260px;
                 text-align: center;
         }
         .p{
+            background-color:black;
+            color:white;
             display: block;
                 font-size: 150px;
                 text-align: center;
@@ -26,10 +30,10 @@
             position: relative;
             background-color: black;
             color:white;
-            padding:50px 250px;
+            padding:50px 300px;
             position: absolute;
             top:70%;
-            left:32%;
+            left:28%;
             border-radius: 50px;
             cursor: pointer;
         }
